--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
 html{
-  font-family: monospace;
+  background-image: url("./wallpaper.jpg");
+  background-size: cover;
+}
+
+body{
+  margin: 2rem auto;
+  max-width: 800px;
 }
