--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 html{
-  background-image: url("./wallpaper.jpg");
+  background-image: url("assets/images/wallpaper.jpg");
   background-size: cover;
 }
 
